# deck2pdf-python

./: .age.toml  .readthedocs.yaml  CHANGES.rst  README.rst  Taskfile.yaml  custom.example.py  pyproject.toml
.github/: release-body.md
.github/workflows/: main.yml  release.yml
docs/: Taskfile.yaml  conf.py  formats.rst  index.rst  usage.rst
docs/_locales/ja/LC_MESSAGES/: changes.po  index.po
src/deck2pdf/: _types.py  cli.py  reader.py  writer.py
src/deck2pdf/slides/: __init__.py  _base.py  generic.py  revealjs.py
tests/: test_it.py
