[project]
name = "deck2pdf"
version = "0.7.0"
description = "Convert from html presentaition to pdf."
authors = [{name = "Kazuya Takei", email = "myself@attakei.net"}]
readme = "README.rst"
requires-python = ">=3.8"
dependencies = [
    "click>=8",
    "playwright>=1",
    "pypdf>=5",
]
license = {file = "LICENSE"}
classefires = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Presentation",
    "Topic :: Utilities",
]

[project.urls]
Repository = "https://github.com/attakei/deck2pdf-python"

[project.scripts]
deck2pdf = "deck2pdf.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-intl>=2.2.0",
    "sphinx-revealjs>=3.0.4",
    "sphinx>=7.1.2",
]
